--- a/Bai_tap_1/index.html
+++ b/Bai_tap_1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>practice</title>
+		<title>practice new </title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
