--- a/Bai_tap_1/index.html
+++ b/Bai_tap_1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>practice new </title>
+		<title>Edit commit 1</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
@@ -18,7 +18,8 @@
 							Our product = Your Success
 						</div>
 						<div class="banner-content">
-							Want to know how to get the most from your website? Here at Surefire we're experts at helping businesses do just that. We design great looking websites that are clear and intuitive. Don't just take our word for it though ? see for yourself. We offer our services for over 300 TV shows spread around channels from all around the world so we are bound to be able to find and cater to your viewing needs. If we don't have what you are looking for right now then donet worry, we are continuously expanding our database - you can even submit TV shows you would recommend we add! 
+
+							Want go to know how to get the most from your website? Here at Surefire we're experts at helping businesses do just that. We design great looking websites that are clear and intuitive. Don't just take our word for it though ? see for yourself. We offer our services for over 300 TV shows spread around channels from all around the world so we are bound to be able to find and cater to your viewing needs. If we don't have what you are looking for right now then donet worry, we are continuously expanding our database - you can even submit TV shows you would recommend we add! 
 						</div>
 					</div>
 					<div class="banner-img"><img src="images/home_intro_image.jpg"/></div>
